--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc -b && node --watch ./dist/index.js"
+    "dev": "tsc -b && node --watch ./dist/index.js",
+    "start" : "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
